--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -45,7 +45,7 @@
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a
-                  class="nav-link active text-white  "
+                  class="nav-link active text-dark"
                   aria-current="page"
                   href="./index.html"
                   >Inicio</a
