--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -43,30 +43,30 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item active menu-item1">
                 <a
-                  class="nav-link active text-dark"
+                  class="nav-link active"
                   aria-current="page"
                   href="./index.html"
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link " href="./pages/productos.html"
+              <li class="nav-item menu-item2">
+                <a class="nav-link" href="./pages/productos.html"
                   >Productos</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item menu-item3">
                 <a class="nav-link " href="./pages/promociones.html"
                   >Promociones</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item menu-item4">
                 <a class="nav-link" href="./pages/contacto.html"
                   >Contacto</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item menu-item5">
                 <a class="nav-link " href="./pages/nosotros.html">Nosotros</a>
               </li>
             </ul>
