--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -35,23 +35,23 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white"
+                <a class="nav-link"
                   href="../index.html"
                   >Inicio</a
                 >
               </li>
           
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/productos.html">Productos</a>
+                <a class="nav-link " href="../pages/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/promociones.html">Promociones</a>
+                <a class="nav-link " href="../pages/promociones.html">Promociones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" >Contacto</a>
+                <a class="nav-link active " aria-current="page" >Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
               </li>
             </ul>
           </div>
