--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -113,21 +113,17 @@
 
   
      
-    <img class="wpp" src="../GaleriaVino/wpp.jpg"
- alt="WPP">
+    <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
 
-    </main>
-    <footer>
-      <section class="container container_footer">
-      <ul class="list-unstyled" >
-        <label for="">Redes:</label>
-        <li><a href="https://www.facebook.com/"> facebook</a></li>
-        <li><a href="https://www.instagram.com/"> Instagram</a></li>
-      </ul>
-
-      <img class="wpp" src="./imagen/WhatsApp.svg.webp" alt="WPP">
-
-  </footer>
+  </main>
+  <footer>
+    <section class="container container_footer">
+    <ul class="list-unstyled" >
+      <label for="">Redes:</label>
+      <li><a href="https://www.facebook.com/"> facebook</a></li>
+      <li><a href="https://www.instagram.com/"> Instagram</a></li>
+    </ul>
+</footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
