--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -77,13 +77,13 @@
 
     <main class="imagen_fondo">
 
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center  titulo1">
         <h1 class="text-bg-dark p-2 rounded">Vevino</h1>
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center titulo2">
         <h2 class="text-bg-dark p-2 rounded">Bodega Argentina</h2>
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center titulo3">
         <p class="text-bg-dark p-2 rounded">
           Queremos que disfrutes de nuestra gran variedad de promociones en los
           mejores y delicionos vinos que tenemos para vos
