--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -65,7 +65,7 @@
 
     <main class="imagen_fondo">
     
-  <div class="rounded  d-flex container_menuvinos">
+  <div class="rounded  d-flex container_menuvinos titulo1 ">
       <ul> <class="dropdown-menu">
         <li><a class="dropdown-item" href="#malbel">Vinos Malbel</a></li>
         <li><a class="dropdown-item" href="#cabernet">Vinos Cabernet</a></li>
@@ -74,7 +74,7 @@
     </div>
 
  
-    <div class="d-flex justify-content-center mt-5" id="malbec   titulo1">
+    <div class="d-flex justify-content-center mt-5 titulo1" id="malbec">
       <h1 class="text-bg-dark rounded ">Malbec</h1>
     </div>
 
@@ -142,9 +142,9 @@
   </section>
 
     
-<div class="d-flex justify-content-center titulo2">
-  <h1 class="text-bg-dark p-2 rounded" id="cabernet">Cabernet</h1>
-</div>
+  <div class="d-flex justify-content-center mt-5 titulo2">
+    <h1 class="text-bg-dark p-2 rounded">Cabernet</h1>
+  </div>
 
 <section class="container  box">
   <div class="row mt-5 ">
@@ -208,7 +208,7 @@
 </div>
 </section>
 
-<div class="d-flex justify-content-center   titulo">
+<div class="d-flex justify-content-center  mt-5 titulo3">
   <h1 class="text-bg-dark p-2 rounded" id="espumantes">Espumantes</h1>
 </div>
 
