--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -65,7 +65,7 @@
 
     <main class="imagen_fondo">
     
-  <div class="rounded  d-flex container_menuvinos titulo1 ">
+  <div class="rounded  d-flex container_menuvinos titulo3 ">
       <ul> <class="dropdown-menu">
         <li><a class="dropdown-item" href="#malbel">Vinos Malbel</a></li>
         <li><a class="dropdown-item" href="#cabernet">Vinos Cabernet</a></li>
@@ -79,9 +79,9 @@
     </div>
 
 
-      <section class="container  box">
+      <section class="container">
         <div class="row mt-5 ">
-          <div class="col-sm-4 "><div class="card h-10">
+          <div class="col-sm-4 card-productos"><div class="card h-10">
             <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
             <div class="card-body align-items-center">
               <h5 class="card-title">Vino Rutini</h5>
