--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -20,6 +20,8 @@
     <meta name="keywords" content="Venta, vino, alcohol, Argentina" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+
+  <!--    Cabecera   -->
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -75,7 +77,8 @@
       </nav>
     </header>
 
-    <main class="imagen_fondo">
+    <!-- Cuerpo principal -->
+    <main class="imagen_fondo ">
 
       <div class="d-flex justify-content-center  titulo1">
         <h1 class="text-bg-dark p-2 rounded">Vevino</h1>
@@ -90,12 +93,10 @@
         </p>
       </div>
 
-      <section
-        class="container container_index d-flex justify-content-center align-items-center"
-      >
-        <div class="row mt-5">
-          <div class="col-sm-4">
-            <div class="card h-10">
+      <section class="container container_index d-flex justify-content-center align-items-center  ">
+        <div class="row mt-5 ">
+          <div class="col-sm-4 titulo3">
+            <div class="card h-10  ">
               <img
                 src="./GaleriaVino/vino_rutini 3.webp"
                 class="card-img-top rounded float-start"
@@ -107,7 +108,7 @@
             </div>
           </div>
 
-          <div class="col-sm-4">
+          <div class="col-sm-4 titulo3">
             <div class="card h-10">
               <img
                 src="./GaleriaVino/vino_trumpeter 4.webp"
@@ -119,7 +120,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 titulo3">
             <div class="card h-10">
               <img
                 src="./GaleriaVino/vino_linda 1.webp"
@@ -132,12 +133,13 @@
             </div>
           </div>
         </div>
-        <img class="wpp" src="../Proyecto_Final_CoderLPM/GaleriaVino/wpp.jpg" alt="WPP" />
+        <img class="wpp" src="../Proyecto_Final_Coder/GaleriaVino/wpp.jpg" alt="WPP" />
       </section>
     </main>
-
+  <!-- Pie -->
+  
     <footer>
-      <div class="container container_footer">
+      <div class="container container_footer mt-2">
         <ul class="list-unstyled">
           <label for="">Redes:</label>
           <li><a href="https://www.facebook.com/"> facebook</a></li>
