--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -16,8 +16,9 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>Venvino - Produtos</title>
 
-
   </head>
+
+  <!--    Cabecera   -->
   <body>
     <header>
       <nav class="navbar navbar-expand-lg ">
@@ -63,6 +64,8 @@
       </nav>
     </header>
 
+        <!-- Cuerpo principal -->
+
     <main class="imagen_fondo">
     
   <div class="rounded  d-flex container_menuvinos titulo3 ">
@@ -81,16 +84,16 @@
 
       <section class="container">
         <div class="row mt-5 ">
-          <div class="col-sm-4 card-productos"><div class="card h-10">
-            <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
-            <div class="card-body align-items-center">
+          <div class="col-sm-4 card-productos"><div class="card h-10 titulo3">
+            <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start " alt="imagen de vino linda">
+            <div class="card-body align-items-center ">
               <h5 class="card-title">Vino Rutini</h5>
               <p>Precio: $1.299 $</p>
               <a href="#" class="btn btn-dark">Comprar</a>
             </div>
           </div>
         </div>
-          <div class="col-sm-4"><div class="card h-10">
+          <div class="col-sm-4"><div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
             <div class="card-body">
               <h5 class="card-title">Vino Rutini</h5>
@@ -98,7 +101,7 @@
               <a href="#" class="btn btn-dark">Comprar</a>
             </div>
           </div></div>
-          <div class="col-sm-4"><div class="card h-10">
+          <div class="col-sm-4"><div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
             <div class="card-body">
               <h5 class="card-title">Vino Linda</h5>
@@ -278,8 +281,10 @@
 <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
 
     </main>
+
+      <!-- Pie -->
     <footer>
-      <section class="container container_footer">
+      <section class="container container_footer  mt-5">
       <ul class="list-unstyled" >
         <label for="">Redes:</label>
         <li><a href="https://www.facebook.com/"> facebook</a></li>
