--- a/Proyecto_Final_Coder/pages/promociones.html
+++ b/Proyecto_Final_Coder/pages/promociones.html
@@ -18,6 +18,8 @@
     <title>Venvino - Promociones</title>
 
   </head>
+
+    <!--    Cabecera   -->
   <body>
     <header>
       <nav class="navbar navbar-expand-lg ">
@@ -61,7 +63,7 @@
         </div>
       </nav>
     </header>
-
+<!-- Cuerpo principal -->
     <main class="imagen_fondo">
 
       <section class="container1" >
@@ -106,6 +108,8 @@
   <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
 
 </main>
+
+  <!-- Pie -->
 <footer>
   <section class="container container_footer">
   <ul class="list-unstyled" >
@@ -114,7 +118,6 @@
     <li><a href="https://www.instagram.com/"> Instagram</a></li>
   </ul>
 </footer>
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
