--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -20,8 +20,9 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>Venvino - Nosotros</title>
 
-    
+  
   </head>
+      <!--    Cabecera   -->
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -73,6 +74,8 @@
       </nav>
     </header>
 
+
+       <!-- Cuerpo principal -->
     <main class="imagen_fondo">
 
       <section class="container1" >
@@ -132,8 +135,10 @@
         <li><a href="https://www.facebook.com/"> facebook</a></li>
         <li><a href="https://www.instagram.com/"> Instagram</a></li>
       </ul>
-  </footer>
 
+      
+      <!-- Pie -->
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
