--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -22,15 +22,12 @@
   </head>
 
   <!--    Cabecera   -->
-  <body>
+  <body >
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand h3" href="#"
-            ><img
-              class="img_logo"
-              src="./GaleriaVino/logo-vino2.jpg"
-              alt="Logo"
+          <a class="navbar-brand" href="#"
+            ><img class="img_logo" src="./GaleriaVino/logo-vino2.jpg" alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
@@ -45,30 +42,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active menu-item1">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
+              <li class="nav-item ">
+                <a class="nav-link "
                   href="./index.html"
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item menu-item2">
-                <a class="nav-link" href="./pages/productos.html"
-                  >Productos</a
-                >
+              <li class="nav-item">
+                <a class="nav-link " href="./pages/productos.html">Productos</a>
               </li>
-              <li class="nav-item menu-item3">
-                <a class="nav-link " href="./pages/promociones.html"
-                  >Promociones</a
-                >
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/promociones.html">Promociones</a>
               </li>
-              <li class="nav-item menu-item4">
-                <a class="nav-link" href="./pages/contacto.html"
-                  >Contacto</a
-                >
+              <li class="nav-item">
+                <a class="nav-link " href="./pages/contacto.html">Contacto</a>
               </li>
-              <li class="nav-item menu-item5">
+              <li class="nav-item">
                 <a class="nav-link " href="./pages/nosotros.html">Nosotros</a>
               </li>
             </ul>
@@ -76,7 +65,6 @@
         </div>
       </nav>
     </header>
-
     <!-- Cuerpo principal -->
     <main class="imagen_fondo ">
 
@@ -139,7 +127,7 @@
   <!-- Pie -->
   
     <footer>
-      <div class="container container_footer mt-2">
+      <div class="container container_footer mt-2  text-bg-dark">
         <ul class="list-unstyled">
           <label for="">Redes:</label>
           <li><a href="https://www.facebook.com/"> facebook</a></li>
