--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../GaleriaVino/vino_favicon.png" type="image/x-icon">
+    <meta name="description" content="En esta pagina podran ingresar los datos para quedar registrados">
+    <meta name="keywords" content="Venta, vinos, alcohol, Argentina, Promociones">
     <title>Venvino - Contacto</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -60,8 +62,8 @@
     </header>
 
     <main class="imagen_fondo">
-      <section class="container1" >
-      <div class="d-flex justify-content-center">
+      <section class="container1 " >
+      <div class="d-flex justify-content-center mt-5">
         <h1 class="text-bg-dark p-2 rounded">Formulario de contacto</h1>
       </div>
     </section>
@@ -98,12 +100,12 @@
                 <input type="text" class="form-control" id="inputAddress" placeholder="">
             </div>
       
-            <div class="row container_botton">
+            <div class="row container_botton mt-5">
                 <div class="col-6">
-                    <button type="submit" class="btn text-bg-dark  rounded">Iniciar Sesión</button>
+                    <button type="submit" class="boton  rounded">Iniciar Sesión</button>
                   </div>
                   <div class="col-6 ">
-                    <button type="submit" class="btn  text-bg-dark  rounded">Registrarme</button>
+                    <button type="submit" class="boton  rounded">Registrarme</button>
                 </div>
               </div>
 
@@ -117,7 +119,7 @@
 
   </main>
   <footer>
-    <section class="container container_footer">
+    <section class="container container_footer mt-5">
     <ul class="list-unstyled" >
       <label for="">Redes:</label>
       <li><a href="https://www.facebook.com/"> facebook</a></li>
