--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -47,25 +47,25 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white" href="../index.html">Inicio</a>
+                <a class="nav-link " href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/productos.html"
+                <a class="nav-link " href="../pages/productos.html"
                   >Productos</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/promociones.html"
+                <a class="nav-link " href="../pages/promociones.html"
                   >Promociones</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/contacto.html"
+                <a class="nav-link " href="../pages/contacto.html"
                   >Contacto</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page">Nosotros</a
+                <a class="nav-link active text-dark" aria-current="page">Nosotros</a
                 >
               </li>
             </ul>
@@ -86,7 +86,7 @@
         <p class="text-bg-dark p-2 rounded">Queremos invitarte a suscribirte y asi podras enterarte de nuestras novedades y promociones en vino:
         </p>
       </div>
-        <div class="class="row color3 text-bg-dark container-maps mt-5>
+        <div class="class="row color3 text-bg-dark container-maps mt-5   rounded mx-auto d-block>
               <input
                 name="email"
                 type="email"
@@ -103,7 +103,7 @@
     <div class="d-flex justify-content-center">
       <h4 class="text-bg-dark p-1 rounded">Direccion:</h4>
     </div>
-          <div class="row color3 container-maps">
+          <div class="row color3 container-maps rounded mx-auto d-block ">
       <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.849326700073!2d-58.391542084813636!3d-34.60797138045842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac3724f3e05%3A0xb7c835e1025e0a9d!2sBartolom%C3%A9%20Mitre%201604%2C%20C1037ABF%20CABA!5e0!3m2!1ses-419!2sar!4v1658521528717!5m2!1ses-419!2sar"
           class="img-fluid" style="border: 100px;" allowfullscreen="" loading="lazy"
@@ -113,8 +113,8 @@
         </div>
    
     
-        <div class="row md-12">
-          <iframe class="altura"
+        <div class="row md-12 rounded mx-auto d-block  ">
+          <iframe class="container-video"
           
             src="https://www.youtube.com/embed/-NJzMhXH0gA"
             title="YouTube video player"
