--- a/Proyecto_Final_Coder/pages/promociones.html
+++ b/Proyecto_Final_Coder/pages/promociones.html
@@ -41,22 +41,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link  text-white"
+                <a class="nav-link "
                   href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/productos.html">Productos</a>
+                <a class="nav-link " href="../pages/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page">Promociones</a>
+                <a class="nav-link active text-dark" aria-current="page">Promociones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/contacto.html">Contacto</a>
+                <a class="nav-link " href="../pages/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../pages/nosotros.html">Nosotros</a>
+                <a class="nav-link " href="../pages/nosotros.html">Nosotros</a>
               </li>
             </ul>
           </div>
@@ -67,32 +67,38 @@
     <main class="imagen_fondo">
 
       <section class="container1" >
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center titulo2">
         <h1 class="text-bg-dark p-2 rounded">Combos de vino a los mejores precios</h1>
       </div>
   
     </section>
 
-    <section class="container">
+    <section class="container  container-promociones">
       <div class="row mt-5">
-        <div class="col-sm-3"><div class="card h-15">
+        <div class="col-sm-3 titulo3">
+          <div class="card h-15">
           <img src="../GaleriaVino/vino_combo_Combo Vinos Premium X6 Rutini Trumpeter Alamos 1.webp" class="card-img-top rounded float-start" alt="imagen de vino rutini">
           <div class="card-body">
             <h5 class="card-title">Combo Vinos Premium X6 Rutini Trumpeter Alamos</h5>
             <p class="card-text">Precio: $7.300.</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
-        </div></div>
+        </div>
+      </div>
         
-        <div class="col-sm-5"><div class="card h-15">
+        <div class="col-sm-5 titulo3">
+          <div class="card h-15 ">
           <img src="../GaleriaVino/vino_combo_Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix  2.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Trumpeter">
           <div class="card-body">
             <h5 class="card-title">Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix</h5>
             <p class="card-text">Precio: $8.999</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
-        </div></div>
-        <div class="col-sm-3"><div class="card h-15">
+        </div>
+      </div>
+
+        <div class="col-sm-3 titulo3">
+          <div class="card h-15">
           <img src="../GaleriaVino/vino_combo_Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo  3.webp" class="card-img-top rounded float-end" alt="imagen de vino linda">
           <div class="card-body">
             <h5 class="card-title">Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo</h5>
@@ -111,7 +117,7 @@
 
   <!-- Pie -->
 <footer>
-  <section class="container container_footer">
+  <section class="container container_footer mt-2">
   <ul class="list-unstyled" >
     <label for="">Redes:</label>
     <li><a href="https://www.facebook.com/"> facebook</a></li>
