actualizacion de la paginal

--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -63,12 +63,12 @@
 
     <main class="imagen_fondo">
       <section class="container1 " >
-      <div class="d-flex justify-content-center mt-5">
+      <div class="d-flex justify-content-center mt-5 titulo1">
         <h1 class="text-bg-dark p-2 rounded">Formulario de contacto</h1>
       </div>
     </section>
 
-      <div class="row color1 container-formulario text-bg-dark mt-5">
+      <div class="row color1 container-formulario text-bg-dark mt-5  titulo3">
         <form class="row g-1">
             <div class="row g-1">
                 <div class="col-6">
@@ -101,10 +101,10 @@
             </div>
       
             <div class="row container_botton mt-5">
-                <div class="col-6">
+                <div class="col-6 titulo1">
                     <button type="submit" class="boton  rounded">Iniciar Sesión</button>
                   </div>
-                  <div class="col-6 ">
+                  <div class="col-6 titulo1">
                     <button type="submit" class="boton  rounded">Registrarme</button>
                 </div>
               </div>
