--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -80,13 +80,13 @@
 
       <section class="container1" >
         <div class="d-flex justify-content-center">
-          <h1 class="text-bg-dark p-2 rounded">En Vevino</h1>
+          <h1 class="text-bg-dark p-2 rounded  titulo1">En Vevino</h1>
         </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center titulo2">
         <p class="text-bg-dark p-2 rounded">Queremos invitarte a suscribirte y asi podras enterarte de nuestras novedades y promociones en vino:
         </p>
       </div>
-        <div class="class="row color3 text-bg-dark container-maps mt-5   rounded mx-auto d-block>
+        <div class="class="row color3 text-bg-dark container-maps mt-5   rounded mx-auto d-block  titulo3>
               <input
                 name="email"
                 type="email"
@@ -101,10 +101,10 @@
 
 
     <div class="d-flex justify-content-center">
-      <h4 class="text-bg-dark p-1 rounded">Direccion:</h4>
+      <h4 class="text-bg-dark p-1 rounded titulo3">Direccion:</h4>
     </div>
-          <div class="row color3 container-maps rounded mx-auto d-block ">
-      <iframe
+          <div class="row color3 container-maps rounded mx-auto d-block titulo2">
+      <iframe width="560" height="315"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.849326700073!2d-58.391542084813636!3d-34.60797138045842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac3724f3e05%3A0xb7c835e1025e0a9d!2sBartolom%C3%A9%20Mitre%201604%2C%20C1037ABF%20CABA!5e0!3m2!1ses-419!2sar!4v1658521528717!5m2!1ses-419!2sar"
           class="img-fluid" style="border: 100px;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
