--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <section class="container container_index d-flex justify-content-center align-items-center  ">
-        <div class="row mt-5 ">
+        <div class="row mt-5 box">
           <div class="col-sm-4 titulo3">
             <div class="card h-10  ">
               <img
