--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -66,7 +66,7 @@
       </nav>
     </header>
     <!-- Cuerpo principal -->
-    <main class="imagen_fondo">
+    <main class="imagen_fondo  box">
 
       <div class="d-flex justify-content-center  titulo1">
         <h1 class="text-bg-dark p-2 rounded">Vevino</h1>
@@ -81,10 +81,10 @@
         </p>
       </div>
 
-      <section class="container container_index d-flex justify-content-center align-items-center  ">
-        <div class="row mt-5 box">
+      <section class=" container container_index d-flex justify-content-center align-items-center">
+        <div class="row mt-5 ">
           <div class="col-sm-4 titulo3">
-            <div class="card h-10  ">
+            <div class="card h-10 ">
               <img
                 src="./GaleriaVino/vino_rutini 3.webp"
                 class="card-img-top rounded float-start"
