--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -30,7 +30,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img_logo"
-              src="../GaleriaVino/logo-vino2.jpg"
+              src="../GaleriaVino/Galeria vino formato svg/fondo_imagen.svg"
               alt="Logo"
           /></a>
           <button
@@ -125,7 +125,7 @@
         </div>
 
       </section>   
-      <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
+      <img class="wpp" src="../GaleriaVino/Galeria vino formato svg/wpps.svg" alt="WPP">
 
     </main>
     <footer>
