--- a/Proyecto_Final_Coder/pages/promociones.html
+++ b/Proyecto_Final_Coder/pages/promociones.html
@@ -73,11 +73,11 @@
   
     </section>
 
-    <section class="container  container-promociones">
+    <section class="container  container-promociones box">
       <div class="row mt-5">
-        <div class="col-sm-3 titulo3">
+        <div class="col titulo3">
           <div class="card h-15">
-          <img src="../GaleriaVino/vino_combo_Combo Vinos Premium X6 Rutini Trumpeter Alamos 1.webp" class="card-img-top rounded float-start" alt="imagen de vino rutini">
+          <img src="../GaleriaVino/vino_combo_Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix  2.webp" class="card-img-top rounded float-start" alt="imagen de vino rutini">
           <div class="card-body">
             <h5 class="card-title">Combo Vinos Premium X6 Rutini Trumpeter Alamos</h5>
             <p class="card-text">Precio: $7.300.</p>
@@ -86,7 +86,7 @@
         </div>
       </div>
         
-        <div class="col-sm-5 titulo3">
+        <div class="col titulo3">
           <div class="card h-15 ">
           <img src="../GaleriaVino/vino_combo_Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix  2.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Trumpeter">
           <div class="card-body">
@@ -97,7 +97,7 @@
         </div>
       </div>
 
-        <div class="col-sm-3 titulo3">
+        <div class="col titulo3">
           <div class="card h-15">
           <img src="../GaleriaVino/vino_combo_Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo  3.webp" class="card-img-top rounded float-end" alt="imagen de vino linda">
           <div class="card-body">
