--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="box">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,12 +22,15 @@
   </head>
 
   <!--    Cabecera   -->
-  <body >
+  <body>
     <header>
-      <nav class="navbar navbar-expand-lg ">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img class="img_logo" src="./GaleriaVino/logo-vino2.jpg" alt="Logo"
+            ><img
+              class="img_logo"
+              src="../Proyecto_Final_Coder/GaleriaVino/Galeria vino formato svg/fondo_imagen.svg"
+              alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
@@ -42,23 +45,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item ">
-                <a class="nav-link "
-                  href="./index.html"
-                  >Inicio</a
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/promociones.html"
+                  >Promociones</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="./pages/productos.html">Productos</a>
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/promociones.html">Promociones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="./pages/contacto.html">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="./pages/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
               </li>
             </ul>
           </div>
@@ -66,9 +68,8 @@
       </nav>
     </header>
     <!-- Cuerpo principal -->
-    <main class="imagen_fondo  box">
-
-      <div class="d-flex justify-content-center  titulo1">
+    <main class="imagen_fondo">
+      <div class="d-flex justify-content-center titulo1">
         <h1 class="text-bg-dark p-2 rounded">Vevino</h1>
       </div>
       <div class="d-flex justify-content-center titulo2">
@@ -81,12 +82,14 @@
         </p>
       </div>
 
-      <section class=" container container_index d-flex justify-content-center align-items-center">
-        <div class="row mt-5 ">
-          <div class="col-sm-4 titulo3">
-            <div class="card h-10 ">
+      <section
+        class=" box container container_index d-flex justify-content-center align-items-center"
+      >
+        <div class="row mt-5">
+          <div class="col titulo3">
+            <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_rutini 3.webp"
+                src="./GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg"
                 class="card-img-top rounded float-start"
                 alt="imagen de vino rutini"
               />
@@ -96,10 +99,10 @@
             </div>
           </div>
 
-          <div class="col-sm-4 titulo3">
+          <div class="col titulo3">
             <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_trumpeter 4.webp"
+                src="../Proyecto_Final_Coder/GaleriaVino/vino_trumpeter 4.webp"
                 class="card-img-top rounded mx-auto d-block"
                 alt="imagen de vino Trumpeter"
               />
@@ -108,7 +111,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 titulo3">
+          <div class="col titulo3">
             <div class="card h-10">
               <img
                 src="./GaleriaVino/vino_linda 1.webp"
@@ -121,13 +124,17 @@
             </div>
           </div>
         </div>
-        <img class="wpp" src="../Proyecto_Final_Coder/GaleriaVino/wpp.jpg" alt="WPP" />
+        <img
+          class="wpp"
+          src="../Proyecto_Final_Coder/GaleriaVino/Galeria vino formato svg/wpp.svg"
+          alt="WPP"
+        />
       </section>
     </main>
-  <!-- Pie -->
-  
+    <!-- Pie -->
+
     <footer>
-      <div class="container container_footer mt-2  text-bg-dark">
+      <div class="container container_footer mt-2 text-bg-dark">
         <ul class="list-unstyled">
           <label for="">Redes:</label>
           <li><a href="https://www.facebook.com/"> facebook</a></li>
