--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img class="img_logo" src="../GaleriaVino/logo-vino2.jpg" alt="Logo"
+            ><img class="img_logo" src="../GaleriaVino/Galeria vino formato svg/fondo_imagen.svg" alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
@@ -82,9 +82,9 @@
     </div>
 
 
-      <section class="container">
+      <section class="container box">
         <div class="row mt-5 ">
-          <div class="col-sm-4 card-productos"><div class="card h-10 titulo3">
+          <div class="col card-productos"><div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start " alt="imagen de vino linda">
             <div class="card-body align-items-center ">
               <h5 class="card-title">Vino Rutini</h5>
@@ -93,7 +93,7 @@
             </div>
           </div>
         </div>
-          <div class="col-sm-4"><div class="card h-10 titulo3">
+          <div class="col"><div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
             <div class="card-body">
               <h5 class="card-title">Vino Rutini</h5>
@@ -101,7 +101,7 @@
               <a href="#" class="btn btn-dark">Comprar</a>
             </div>
           </div></div>
-          <div class="col-sm-4"><div class="card h-10 titulo3">
+          <div class="col"><div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
             <div class="card-body">
               <h5 class="card-title">Vino Linda</h5>
@@ -115,7 +115,7 @@
 
     <section class="container  box">
       <div class="row mt-5 ">
-        <div class="col-sm-4 "><div class="card h-10">
+        <div class="col "><div class="card h-10">
           <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
           <div class="card-body align-items-center">
             <h5 class="card-title">Vino Rutini</h5>
@@ -124,7 +124,7 @@
           </div>
         </div>
       </div>
-        <div class="col-sm-4"><div class="card h-10">
+        <div class="col"><div class="card h-10">
           <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
           <div class="card-body">
             <h5 class="card-title">Vino Rutini</h5>
@@ -132,7 +132,7 @@
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
         </div></div>
-        <div class="col-sm-4"><div class="card h-10">
+        <div class="col"><div class="card h-10">
           <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
           <div class="card-body">
             <h5 class="card-title">Vino Linda</h5>
@@ -151,7 +151,7 @@
 
 <section class="container  box">
   <div class="row mt-5 ">
-    <div class="col-sm-4 "><div class="card h-10">
+    <div class="col "><div class="card h-10">
       <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
       <div class="card-body align-items-center">
         <h5 class="card-title">Vino Rutini</h5>
@@ -160,7 +160,7 @@
       </div>
     </div>
   </div>
-    <div class="col-sm-4"><div class="card h-10">
+    <div class="col"><div class="card h-10">
       <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
       <div class="card-body">
         <h5 class="card-title">Vino Rutini</h5>
@@ -168,7 +168,7 @@
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div></div>
-    <div class="col-sm-4"><div class="card h-10">
+    <div class="col"><div class="card h-10">
       <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
       <div class="card-body">
         <h5 class="card-title">Vino Linda</h5>
@@ -182,7 +182,7 @@
 
 <section class="container  box">
 <div class="row mt-5 ">
-  <div class="col-sm-4 "><div class="card h-10">
+  <div class="col "><div class="card h-10">
     <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
     <div class="card-body align-items-center">
       <h5 class="card-title">Vino Rutini</h5>
@@ -191,7 +191,7 @@
     </div>
   </div>
 </div>
-  <div class="col-sm-4"><div class="card h-10">
+  <div class="col"><div class="card h-10">
     <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
     <div class="card-body">
       <h5 class="card-title">Vino Rutini</h5>
@@ -218,7 +218,7 @@
 
 <section class="container  box">
   <div class="row mt-5 ">
-    <div class="col-sm-4 "><div class="card h-10">
+    <div class="col "><div class="card h-10">
       <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
       <div class="card-body align-items-center">
         <h5 class="card-title">Vino Rutini</h5>
@@ -227,7 +227,7 @@
       </div>
     </div>
   </div>
-    <div class="col-sm-4"><div class="card h-10">
+    <div class="col"><div class="card h-10">
       <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
       <div class="card-body">
         <h5 class="card-title">Vino Rutini</h5>
@@ -235,7 +235,7 @@
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div></div>
-    <div class="col-sm-4"><div class="card h-10">
+    <div class="col"><div class="card h-10">
       <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
       <div class="card-body">
         <h5 class="card-title">Vino Linda</h5>
@@ -248,8 +248,8 @@
 </section>
 
 <section class="container  box">
-<div class="row mt-5 ">
-  <div class="col-sm-4 "><div class="card h-10">
+<div class="row ">
+  <div class="col"><div class="card h-10">
     <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
     <div class="card-body align-items-center">
       <h5 class="card-title">Vino Rutini</h5>
@@ -258,7 +258,7 @@
     </div>
   </div>
 </div>
-  <div class="col-sm-4"><div class="card h-10">
+  <div class="col"><div class="card h-10">
     <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
     <div class="card-body">
       <h5 class="card-title">Vino Rutini</h5>
@@ -266,7 +266,7 @@
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div></div>
-  <div class="col-sm-4"><div class="card h-10">
+  <div class="col"><div class="card h-10">
     <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
     <div class="card-body">
       <h5 class="card-title">Vino Linda</h5>
