--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -119,7 +119,7 @@
 
   </main>
   <footer>
-    <section class="container container_footer mt-5">
+    <section class="container container_footer mt-5 justify-content-center d-flex">
     <ul class="list-unstyled" >
       <label for="">Redes:</label>
       <li><a href="https://www.facebook.com/"> facebook</a></li>
