--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -113,7 +113,7 @@
         </div>
    
     
-        <div class="row md-12 rounded mx-auto d-block  ">
+        <div class="row md-12 rounded mx-auto d-block mt-5">
           <iframe class="container-video"
           
             src="https://www.youtube.com/embed/-NJzMhXH0gA"
@@ -125,11 +125,11 @@
         </div>
 
       </section>   
-      <img class="wpp" src="../GaleriaVino/Galeria vino formato svg/wpps.svg" alt="WPP">
+      <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
 
     </main>
     <footer>
-      <section class="container container_footer">
+      <section class="container container_footer justify-content-center d-flex">
       <ul class="list-unstyled" >
         <label for="">Redes:</label>
         <li><a href="https://www.facebook.com/"> facebook</a></li>
