--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -284,7 +284,7 @@
 
       <!-- Pie -->
     <footer>
-      <section class="container container_footer  mt-5">
+      <section class="container container_footer mt-5 justify-content-center d-flex">
       <ul class="list-unstyled" >
         <label for="">Redes:</label>
         <li><a href="https://www.facebook.com/"> facebook</a></li>
