--- a/Proyecto_Final_Coder/pages/promociones.html
+++ b/Proyecto_Final_Coder/pages/promociones.html
@@ -73,14 +73,14 @@
   
     </section>
 
-    <section class="container  container-promociones box">
+    <section class="container   box">
       <div class="row mt-5">
         <div class="col titulo3">
           <div class="card h-15">
-          <img src="../GaleriaVino/vino_combo_Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix  2.webp" class="card-img-top rounded float-start" alt="imagen de vino rutini">
+          <img src="../GaleriaVino/combo2_vinos.webp " class="card-img-top rounded float-start" alt="combo de vinos que contienen Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo">
           <div class="card-body">
-            <h5 class="card-title">Combo Vinos Premium X6 Rutini Trumpeter Alamos</h5>
-            <p class="card-text">Precio: $7.300.</p>
+            <h5 class="card-title">Combo de vinos Premium x6 Rutini Trumpeter Alamos </h5>
+            <p class="card-text">Precio: $7.300</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
         </div>
@@ -88,9 +88,9 @@
         
         <div class="col titulo3">
           <div class="card h-15 ">
-          <img src="../GaleriaVino/vino_combo_Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix  2.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Trumpeter">
+          <img src="../GaleriaVino/combo1_vinos.webp" class="card-img-top rounded mx-auto d-block" alt="combo de vinos x6 contienen rutini, luigui, trumpeter, alamos">
           <div class="card-body">
-            <h5 class="card-title">Vino Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo- Mix</h5>
+            <h5 class="card-title">Combo de Vinos Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo - Mix</h5>
             <p class="card-text">Precio: $8.999</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
@@ -111,13 +111,13 @@
  
 
   </section>
-  <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
+  <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="logo de whatsapp">
 
 </main>
 
   <!-- Pie -->
 <footer>
-  <section class="container container_footer mt-2">
+  <section class="container container_footer mt-5 justify-content-center d-flex">
   <ul class="list-unstyled" >
     <label for="">Redes:</label>
     <li><a href="https://www.facebook.com/"> facebook</a></li>
