--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -29,7 +29,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img_logo"
-              src="../Proyecto_Final_Coder/GaleriaVino/Galeria vino formato svg/fondo_imagen.svg"
+              src="../Proyecto_Final_Coder/GaleriaVino/logo-vino2.jpg"
               alt="Logo"
           /></a>
           <button
@@ -83,13 +83,13 @@
       </div>
 
       <section
-        class=" box container container_index d-flex justify-content-center align-items-center"
+        class=" box container  d-flex justify-content-center align-items-center"
       >
         <div class="row mt-5">
           <div class="col titulo3">
             <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg"
+                src="../Proyecto_Final_Coder/GaleriaVino/vino_rutini 3.webp"
                 class="card-img-top rounded float-start"
                 alt="imagen de vino rutini"
               />
@@ -127,16 +127,16 @@
         <img
           class="wpp"
           src="../Proyecto_Final_Coder/GaleriaVino/Galeria vino formato svg/wpp.svg"
-          alt="WPP"
+          alt="logo de whatsapp"
         />
       </section>
     </main>
     <!-- Pie -->
 
     <footer>
-      <div class="container container_footer mt-2 text-bg-dark">
+      <div class="container container_footer mt-5 justify-content-center d-flex">
         <ul class="list-unstyled">
-          <label for="">Redes:</label>
+          <label for="">Redes</label>
           <li><a href="https://www.facebook.com/"> facebook</a></li>
           <li><a href="https://www.instagram.com/"> Instagram</a></li>
         </ul>
