--- a/Proyecto_Final_Coder/pages/promociones.html
+++ b/Proyecto_Final_Coder/pages/promociones.html
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="#inicio"
             ><img class="img_logo" src="../GaleriaVino/logo-vino2.jpg" alt="Logo"
           /></a>
           <button
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link "
+                <a class="nav-link id=inicio "
                   href="../index.html"
                   >Inicio</a
                 >
