--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -126,7 +126,7 @@
         </div>
         <img
           class="wpp"
-          src="../Proyecto_Final_Coder/GaleriaVino/Galeria vino formato svg/wpp.svg"
+          src="../Proyecto_Final_Coder/GaleriaVino/wpp.jpg"
           alt="logo de whatsapp"
         />
       </section>
