--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -23,8 +23,8 @@
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img class="img_logo" src="../GaleriaVino/Galeria vino formato svg/fondo_imagen.svg" alt="Logo"
+          <a class="navbar-brand" href="#inicio"
+            ><img class="img_logo" src="../GaleriaVino/logo-vino2.jpg" alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
@@ -40,8 +40,8 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a
-                  class="nav-link "                 
+                <a id="inicio"
+                  class="nav-link"                 
                   href="../index.html"
                   >Inicio</a
                 >
@@ -125,7 +125,7 @@
         </div>
       </div>
         <div class="col"><div class="card h-10">
-          <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+          <img src="../GaleriaVino/" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
           <div class="card-body">
             <h5 class="card-title">Vino Rutini</h5>
             <p>Precio: $1.500</p>
@@ -183,18 +183,18 @@
 <section class="container  box">
 <div class="row mt-5 ">
   <div class="col "><div class="card h-10">
-    <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
+    <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start" alt="imagen de vino catena zapata">
     <div class="card-body align-items-center">
-      <h5 class="card-title">Vino Rutini</h5>
-      <p>Precio: $1.299 $</p>
+      <h5 class="card-title">Vino Catena Zapata</h5>
+      <p>Precio: $1.599 $</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div>
 </div>
   <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+    <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block" alt="Imagen de vino Durigutti">
     <div class="card-body">
-      <h5 class="card-title">Vino Rutini</h5>
+      <h5 class="card-title">Vino Durigutti</h5>
       <p>Precio: $1.500</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
