--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -116,7 +116,7 @@
     <section class="container  box">
       <div class="row mt-5 ">
         <div class="col "><div class="card h-10">
-          <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
+          <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start" alt="imagen de vino linda">
           <div class="card-body align-items-center">
             <h5 class="card-title">Vino Rutini</h5>
             <p>Precio: $1.299 $</p>
@@ -125,7 +125,7 @@
         </div>
       </div>
         <div class="col"><div class="card h-10">
-          <img src="../GaleriaVino/" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+          <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
           <div class="card-body">
             <h5 class="card-title">Vino Rutini</h5>
             <p>Precio: $1.500</p>
@@ -133,7 +133,7 @@
           </div>
         </div></div>
         <div class="col"><div class="card h-10">
-          <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+          <img src="../GaleriaVino/vino_ Luigi-Bosca-Malbec-20131-v2-300x300.jpg" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
           <div class="card-body">
             <h5 class="card-title">Vino Linda</h5>
             <p>Precio: $1.100</p>
@@ -152,27 +152,27 @@
 <section class="container  box">
   <div class="row mt-5 ">
     <div class="col "><div class="card h-10">
-      <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
+      <img src="../GaleriaVino/Pulenta Gran Cabernet Sauvignon X 750cc.webp" class="card-img-top rounded float-start" alt="imagen de vino Pulenta Gran Cabernet Sauvignon">
       <div class="card-body align-items-center">
-        <h5 class="card-title">Vino Rutini</h5>
-        <p>Precio: $1.299 $</p>
+        <h5 class="card-title">Vino Pulenta Gran Cabernet Sauvignon</h5>
+        <p>Precio: $10.000 $</p>
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div>
   </div>
     <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+      <img src="../GaleriaVino/Vino Benmarco Cabernet Sauvignon.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de Vino Benmarco Cabernet Sauvignon">
       <div class="card-body">
-        <h5 class="card-title">Vino Rutini</h5>
-        <p>Precio: $1.500</p>
+        <h5 class="card-title">Vino Benmarco Cabernet Sauvignon</h5>
+        <p>Precio: $12.500</p>
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div></div>
     <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+      <img src="../GaleriaVino/Vino Felino Cabernet Sauvignon Tinto 750cc.webp" class="card-img-top rounded float-end" alt="imagen de Vino Felino Cabernet Sauvignon">
       <div class="card-body">
-        <h5 class="card-title">Vino Linda</h5>
-        <p>Precio: $1.100</p>
+        <h5 class="card-title">Vino Felino Cabernet Sauvignon</h5>
+        <p>Precio: $5.100</p>
         <a href=".#" class="btn btn-dark">Comprar</a>
       </div>
     </div>
@@ -183,26 +183,26 @@
 <section class="container  box">
 <div class="row mt-5 ">
   <div class="col "><div class="card h-10">
-    <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start" alt="imagen de vino catena zapata">
+    <img src="../GaleriaVino/Vino Marcelo Pelleriti Signature Cabernet Sauvignon X 750cc.webp" class="card-img-top rounded float-start" alt="imagen de Vino Marcelo Pelleriti">
     <div class="card-body align-items-center">
-      <h5 class="card-title">Vino Catena Zapata</h5>
-      <p>Precio: $1.599 $</p>
+      <h5 class="card-title">Vino Marcelo Pelleriti</h5>
+      <p>Precio: $8.600 $</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div>
 </div>
   <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block" alt="Imagen de vino Durigutti">
+    <img src="../GaleriaVino/Vino tinto Cabernet sauvignon Novecento Raíces bodega D. Robino 750 ml.webp" class="card-img-top rounded mx-auto d-block" alt="Imagen de vino Novecento Raíces">
     <div class="card-body">
-      <h5 class="card-title">Vino Durigutti</h5>
-      <p>Precio: $1.500</p>
+      <h5 class="card-title">Vino Novecento Raíces</h5>
+      <p>Precio: $2.500</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div></div>
   <div class="col-sm-4"><div class="card h-10">
-    <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+    <img src="../GaleriaVino/Vino Tinto Trapiche Reserva Cabernet Sauvignon 750ml.webp" class="card-img-top rounded float-end" alt="imagen de vino Trapiche Reserva Cabernet Sauvignon">
     <div class="card-body">
-      <h5 class="card-title">Vino Linda</h5>
+      <h5 class="card-title">Vino Trapiche Reserva Cabernet Sauvignon</h5>
       <p>Precio: $1.100</p>
       <a href=".#" class="btn btn-dark">Comprar</a>
     </div>
@@ -219,27 +219,27 @@
 <section class="container  box">
   <div class="row mt-5 ">
     <div class="col "><div class="card h-10">
-      <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
+      <img src="../GaleriaVino/Salentein Espumante Brut Nature Caja.webp" class="card-img-top rounded float-start" alt="imagen de vino Salentein Espumante">
       <div class="card-body align-items-center">
-        <h5 class="card-title">Vino Rutini</h5>
-        <p>Precio: $1.299 $</p>
+        <h5 class="card-title">Vino Salentein Espumante</h5>
+        <p>Precio: $2.299 $</p>
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div>
   </div>
     <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+      <img src="../GaleriaVino/Finca Suarez Espumante Natural 750ml.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Finca Suarez Espumante Natural">
       <div class="card-body">
-        <h5 class="card-title">Vino Rutini</h5>
-        <p>Precio: $1.500</p>
+        <h5 class="card-title">Vino Finca Suarez Espumante</h5>
+        <p>Precio: $8.500</p>
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div></div>
     <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+      <img src="../GaleriaVino/Zuccardi Blanc De Blancs - Extra Brut Espumante Alta Gama.webp" class="card-img-top rounded float-end" alt="imagen de vino Zuccardi Blanc De Blancs">
       <div class="card-body">
-        <h5 class="card-title">Vino Linda</h5>
-        <p>Precio: $1.100</p>
+        <h5 class="card-title">Vino Zuccardi Blanc De Blancs</h5>
+        <p>Precio: $6.100</p>
         <a href=".#" class="btn btn-dark">Comprar</a>
       </div>
     </div>
@@ -250,27 +250,27 @@
 <section class="container  box">
 <div class="row ">
   <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start" alt="imagen de vino linda">
+    <img src="../GaleriaVino/Espumante Alfredo Roca Dulce Natural Caja.webp" class="card-img-top rounded float-start" alt="imagen de vino Alfredo Roca Dulce Natural">
     <div class="card-body align-items-center">
-      <h5 class="card-title">Vino Rutini</h5>
-      <p>Precio: $1.299 $</p>
+      <h5 class="card-title">Vino Alfredo Roca Dulce Natural</h5>
+      <p>Precio: $10.299 $</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div>
 </div>
   <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+    <img src="../GaleriaVino/Altavista Espumante Rosado.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Altavista Espumante Rosado">
     <div class="card-body">
-      <h5 class="card-title">Vino Rutini</h5>
-      <p>Precio: $1.500</p>
+      <h5 class="card-title">Vino Altavista Espumante Rosado</h5>
+      <p>Precio: $7.500</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div></div>
   <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+    <img src="../GaleriaVino/Vino Espumante Rosado Moscato Pink Tosti 750ml.webp" class="card-img-top rounded float-end" alt="imagen de vino Moscato Pink Tosti">
     <div class="card-body">
-      <h5 class="card-title">Vino Linda</h5>
-      <p>Precio: $1.100</p>
+      <h5 class="card-title">Vino Moscato Pink Tosti</h5>
+      <p>Precio: $8.100</p>
       <a href=".#" class="btn btn-dark">Comprar</a>
     </div>
   </div>
