--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img class="img_logo" src="../GaleriaVino/Galeria vino formato svg/fondo_imagen.svg" alt="Logo"
+            ><img class="img_logo" src="../GaleriaVino/logo-vino2.jpg" alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
@@ -119,7 +119,7 @@
 
   </main>
   <footer>
-    <section class="container container_footer mt-5 justify-content-center d-flex">
+    <section class="container container_footer justify-content-center d-flex  foo_contacto">
     <ul class="list-unstyled" >
       <label for="">Redes:</label>
       <li><a href="https://www.facebook.com/"> facebook</a></li>
