--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -81,11 +81,11 @@
       <h1 class="text-bg-dark rounded ">Malbec</h1>
     </div>
 
-
-      <section class="container box">
-        <div class="row mt-5 ">
-          <div class="col card-productos"><div class="card h-10 titulo3">
-            <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start " alt="imagen de vino linda">
+    <section class="container  box">
+      <div class="row mt-5 ">
+        <div class="col">
+          <div class="card h-10 titulo3">
+            <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start img_tamano " alt="imagen de vino linda">
             <div class="card-body align-items-center ">
               <h5 class="card-title">Vino Rutini</h5>
               <p>Precio: $1.299 $</p>
@@ -93,8 +93,9 @@
             </div>
           </div>
         </div>
-          <div class="col"><div class="card h-10 titulo3">
-            <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+          <div class="col">
+            <div class="card h-10 titulo3">
+            <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Rutini">
             <div class="card-body">
               <h5 class="card-title">Vino Rutini</h5>
               <p>Precio: $1.500</p>
@@ -102,7 +103,7 @@
             </div>
           </div></div>
           <div class="col"><div class="card h-10 titulo3">
-            <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+            <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trumpeter">
             <div class="card-body">
               <h5 class="card-title">Vino Linda</h5>
               <p>Precio: $1.100</p>
@@ -115,8 +116,9 @@
 
     <section class="container  box">
       <div class="row mt-5 ">
-        <div class="col "><div class="card h-10">
-          <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start" alt="imagen de vino linda">
+        <div class="col">
+          <div class="card h-10 titulo3">
+          <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start img_tamano" alt="imagen de vino linda">
           <div class="card-body align-items-center">
             <h5 class="card-title">Vino Rutini</h5>
             <p>Precio: $1.299 $</p>
@@ -124,16 +126,16 @@
           </div>
         </div>
       </div>
-        <div class="col"><div class="card h-10">
-          <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Rutini">
+        <div class="col"><div class="card h-10 titulo3">
+          <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Rutini">
           <div class="card-body">
             <h5 class="card-title">Vino Rutini</h5>
             <p>Precio: $1.500</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
         </div></div>
-        <div class="col"><div class="card h-10">
-          <img src="../GaleriaVino/vino_ Luigi-Bosca-Malbec-20131-v2-300x300.jpg" class="card-img-top rounded float-end" alt="imagen de vino Trumpeter">
+        <div class="col"><div class="card h-10 titulo3">
+          <img src="../GaleriaVino/vino_ Luigi-Bosca-Malbec-20131-v2-300x300.jpg" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trumpeter">
           <div class="card-body">
             <h5 class="card-title">Vino Linda</h5>
             <p>Precio: $1.100</p>
@@ -151,8 +153,9 @@
 
 <section class="container  box">
   <div class="row mt-5 ">
-    <div class="col "><div class="card h-10">
-      <img src="../GaleriaVino/Pulenta Gran Cabernet Sauvignon X 750cc.webp" class="card-img-top rounded float-start" alt="imagen de vino Pulenta Gran Cabernet Sauvignon">
+    <div class="col ">
+      <div class="card h-10 titulo3">
+      <img src="../GaleriaVino/Pulenta Gran Cabernet Sauvignon X 750cc.webp" class="card-img-top rounded float-start img_tamano" alt="imagen de vino Pulenta Gran Cabernet Sauvignon">
       <div class="card-body align-items-center">
         <h5 class="card-title">Vino Pulenta Gran Cabernet Sauvignon</h5>
         <p>Precio: $10.000 $</p>
@@ -160,16 +163,16 @@
       </div>
     </div>
   </div>
-    <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/Vino Benmarco Cabernet Sauvignon.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de Vino Benmarco Cabernet Sauvignon">
+    <div class="col"><div class="card h-10 titulo3">
+      <img src="../GaleriaVino/Vino Benmarco Cabernet Sauvignon.webp" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de Vino Benmarco Cabernet Sauvignon">
       <div class="card-body">
         <h5 class="card-title">Vino Benmarco Cabernet Sauvignon</h5>
         <p>Precio: $12.500</p>
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div></div>
-    <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/Vino Felino Cabernet Sauvignon Tinto 750cc.webp" class="card-img-top rounded float-end" alt="imagen de Vino Felino Cabernet Sauvignon">
+    <div class="col"><div class="card h-10 titulo3">
+      <img src="../GaleriaVino/Vino Felino Cabernet Sauvignon Tinto 750cc.webp" class="card-img-top rounded float-end img_tamano" alt="imagen de Vino Felino Cabernet Sauvignon">
       <div class="card-body">
         <h5 class="card-title">Vino Felino Cabernet Sauvignon</h5>
         <p>Precio: $5.100</p>
@@ -182,8 +185,9 @@
 
 <section class="container  box">
 <div class="row mt-5 ">
-  <div class="col "><div class="card h-10">
-    <img src="../GaleriaVino/Vino Marcelo Pelleriti Signature Cabernet Sauvignon X 750cc.webp" class="card-img-top rounded float-start" alt="imagen de Vino Marcelo Pelleriti">
+  <div class="col ">
+    <div class="card h-10 titulo3">
+    <img src="../GaleriaVino/Vino Marcelo Pelleriti Signature Cabernet Sauvignon X 750cc.webp" class="card-img-top rounded float-start img_tamano" alt="imagen de Vino Marcelo Pelleriti">
     <div class="card-body align-items-center">
       <h5 class="card-title">Vino Marcelo Pelleriti</h5>
       <p>Precio: $8.600 $</p>
@@ -192,15 +196,15 @@
   </div>
 </div>
   <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/Vino tinto Cabernet sauvignon Novecento Raíces bodega D. Robino 750 ml.webp" class="card-img-top rounded mx-auto d-block" alt="Imagen de vino Novecento Raíces">
+    <img src="../GaleriaVino/Vino tinto Cabernet sauvignon Novecento Raíces bodega D. Robino 750 ml.webp" class="card-img-top rounded mx-auto d-block img_tamano titulo3" alt="Imagen de vino Novecento Raíces">
     <div class="card-body">
       <h5 class="card-title">Vino Novecento Raíces</h5>
       <p>Precio: $2.500</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div></div>
-  <div class="col-sm-4"><div class="card h-10">
-    <img src="../GaleriaVino/Vino Tinto Trapiche Reserva Cabernet Sauvignon 750ml.webp" class="card-img-top rounded float-end" alt="imagen de vino Trapiche Reserva Cabernet Sauvignon">
+  <div class="col-sm-4"><div class="card h-10 titulo3">
+    <img src="../GaleriaVino/Vino Tinto Trapiche Reserva Cabernet Sauvignon 750ml.webp" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trapiche Reserva Cabernet Sauvignon">
     <div class="card-body">
       <h5 class="card-title">Vino Trapiche Reserva Cabernet Sauvignon</h5>
       <p>Precio: $1.100</p>
@@ -218,8 +222,8 @@
 
 <section class="container  box">
   <div class="row mt-5 ">
-    <div class="col "><div class="card h-10">
-      <img src="../GaleriaVino/Salentein Espumante Brut Nature Caja.webp" class="card-img-top rounded float-start" alt="imagen de vino Salentein Espumante">
+    <div class="col "><div class="card h-10 titulo3">
+      <img src="../GaleriaVino/Salentein Espumante Brut Nature Caja.webp" class="card-img-top rounded float-start img_tamano" alt="imagen de vino Salentein Espumante">
       <div class="card-body align-items-center">
         <h5 class="card-title">Vino Salentein Espumante</h5>
         <p>Precio: $2.299 $</p>
@@ -227,16 +231,16 @@
       </div>
     </div>
   </div>
-    <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/Finca Suarez Espumante Natural 750ml.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Finca Suarez Espumante Natural">
+    <div class="col"><div class="card h-10 titulo3">
+      <img src="../GaleriaVino/Finca Suarez Espumante Natural 750ml.webp" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Finca Suarez Espumante Natural">
       <div class="card-body">
         <h5 class="card-title">Vino Finca Suarez Espumante</h5>
         <p>Precio: $8.500</p>
         <a href="#" class="btn btn-dark">Comprar</a>
       </div>
     </div></div>
-    <div class="col"><div class="card h-10">
-      <img src="../GaleriaVino/Zuccardi Blanc De Blancs - Extra Brut Espumante Alta Gama.webp" class="card-img-top rounded float-end" alt="imagen de vino Zuccardi Blanc De Blancs">
+    <div class="col"><div class="card h-10 titulo3">
+      <img src="../GaleriaVino/Zuccardi Blanc De Blancs - Extra Brut Espumante Alta Gama.webp" class="card-img-top rounded float-end img-fluid img_tamano" alt="imagen de vino Zuccardi Blanc De Blancs">
       <div class="card-body">
         <h5 class="card-title">Vino Zuccardi Blanc De Blancs</h5>
         <p>Precio: $6.100</p>
@@ -248,9 +252,9 @@
 </section>
 
 <section class="container  box">
-<div class="row ">
-  <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/Espumante Alfredo Roca Dulce Natural Caja.webp" class="card-img-top rounded float-start" alt="imagen de vino Alfredo Roca Dulce Natural">
+<div class="row mt-5 ">
+  <div class="col"><div class="card h-10 titulo3">
+    <img src="../GaleriaVino/Espumante Alfredo Roca Dulce Natural Caja.webp" class="card-img-top rounded float-start img_tamano" alt="imagen de vino Alfredo Roca Dulce Natural">
     <div class="card-body align-items-center">
       <h5 class="card-title">Vino Alfredo Roca Dulce Natural</h5>
       <p>Precio: $10.299 $</p>
@@ -258,16 +262,16 @@
     </div>
   </div>
 </div>
-  <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/Altavista Espumante Rosado.webp" class="card-img-top rounded mx-auto d-block" alt="imagen de vino Altavista Espumante Rosado">
+  <div class="col"><div class="card h-10 titulo3">
+    <img src="../GaleriaVino/Altavista Espumante Rosado.webp" class="card-img-top rounded mx-auto d-block  img_tamano" alt="imagen de vino Altavista Espumante Rosado img-fluid">
     <div class="card-body">
       <h5 class="card-title">Vino Altavista Espumante Rosado</h5>
       <p>Precio: $7.500</p>
       <a href="#" class="btn btn-dark">Comprar</a>
     </div>
   </div></div>
-  <div class="col"><div class="card h-10">
-    <img src="../GaleriaVino/Vino Espumante Rosado Moscato Pink Tosti 750ml.webp" class="card-img-top rounded float-end" alt="imagen de vino Moscato Pink Tosti">
+  <div class="col"><div class="card h-10 titulo3">
+    <img src="../GaleriaVino/Vino Espumante Rosado Moscato Pink Tosti 750ml.webp" class="card-img-top rounded float-end  img_tamano" alt="imagen de vino Moscato Pink Tosti">
     <div class="card-body">
       <h5 class="card-title">Vino Moscato Pink Tosti</h5>
       <p>Precio: $8.100</p>
