--- a/Proyecto_Final_Coder/pages/promociones.html
+++ b/Proyecto_Final_Coder/pages/promociones.html
@@ -88,7 +88,7 @@
         
         <div class="col titulo3">
           <div class="card h-15 ">
-          <img src="../GaleriaVino/combo1_vinos.webp" class="card-img-top rounded mx-auto d-block" alt="combo de vinos x6 contienen rutini, luigui, trumpeter, alamos">
+          <img src=" ../GaleriaVino/combo1_vinos.webp" class="card-img-top rounded mx-auto d-block" alt="combo de vinos x6 contienen rutini, luigui, trumpeter, alamos">
           <div class="card-body">
             <h5 class="card-title">Combo de Vinos Rutini + Trumpeter + Luigi + Nieto + Fin Del Mundo - Mix</h5>
             <p class="card-text">Precio: $8.999</p>
@@ -99,10 +99,10 @@
 
         <div class="col titulo3">
           <div class="card h-15">
-          <img src="../GaleriaVino/vino_combo_Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo  3.webp" class="card-img-top rounded float-end" alt="imagen de vino linda">
+          <img src="../GaleriaVino/vino_combo_Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo  3.webp" class="card-img-top rounded float-end" alt="imagen de combo Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo">
           <div class="card-body">
             <h5 class="card-title">Box Trumpeter Malbec + 2 Copas Negras Grabadas. Ideal Regalo</h5>
-            <p class="card-text">Precio: $6.500</p>
+            <p class="card-text">Precio: $12.500</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
         </div>
