--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -70,15 +70,15 @@
     
   <div class="rounded  d-flex container_menuvinos titulo3 ">
       <ul> <class="dropdown-menu">
-        <li><a class="dropdown-item" href="#malbel">Vinos Malbel</a></li>
+        <li><a class="dropdown-item" href="#malbec">Vinos Malbel</a></li>
         <li><a class="dropdown-item" href="#cabernet">Vinos Cabernet</a></li>
         <li><a class="dropdown-item" href="#espumantes">Vinos Espumantes</a></li>
       </ul>
     </div>
 
  
-    <div class="d-flex justify-content-center mt-5 titulo1" id="malbec">
-      <h1 class="text-bg-dark rounded ">Malbec</h1>
+    <div class="d-flex justify-content-center mt-5 titulo1" >
+      <h1 class="text-bg-dark rounded " id="malbec">Malbec</h1>
     </div>
 
     <section class="container  box">
@@ -148,7 +148,7 @@
 
     
   <div class="d-flex justify-content-center mt-5 titulo2">
-    <h1 class="text-bg-dark p-2 rounded">Cabernet</h1>
+    <h1 class="text-bg-dark p-2 rounded " id="cabernet">Cabernet</h1>
   </div>
 
 <section class="container  box">
