--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -29,7 +29,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img_logo"
-              src="./GaleriaVino/logo-vino2.jpg"
+              src="./GaleriaVino/logo_vino2.jpg"
               alt="Logo"
           /></a>
           <button
@@ -89,7 +89,7 @@
           <div class="col titulo3">
             <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_rutini 3.webp"
+                src="./GaleriaVino/vino_rutini.webp"
                 class="card-img-top rounded float-start"
                 alt="imagen de vino rutini"
               />
@@ -102,7 +102,7 @@
           <div class="col titulo3">
             <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_trumpeter 4.webp"
+                src="./GaleriaVino/vino_trumpeter.webp"
                 class="card-img-top rounded mx-auto d-block"
                 alt="imagen de vino Trumpeter"
               />
