--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img class="img_logo" src="../GaleriaVino/logo-vino2.jpg" alt="Logo"
+            ><img class="img_logo" src="../GaleriaVino/logo_vino2.jpg" alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
