--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -30,7 +30,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img_logo"
-              src="../GaleriaVino/logo-vino2.jpg"
+              src="../GaleriaVino/logo_vino2.jpg"
               alt="Logo"
           /></a>
           <button
