--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -126,8 +126,8 @@
         </div>
         <img
           class="wpp"
-          src="../Proyecto_Final_Coder/GaleriaVino/wpp.jpg"
-          alt="logo de whatsapp"
+          src="./GaleriaVino/wpp.jpg "
+          
         />
       </section>
     </main>
