--- a/Proyecto_Final_Coder/pages/contacto.html
+++ b/Proyecto_Final_Coder/pages/contacto.html
@@ -115,7 +115,7 @@
 
   
      
-    <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
+    <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="logo de whatsapp">
 
   </main>
   <footer>
