--- a/Proyecto_Final_Coder/pages/nosotros.html
+++ b/Proyecto_Final_Coder/pages/nosotros.html
@@ -125,7 +125,7 @@
         </div>
 
       </section>   
-      <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
+      <img class="wpp" src="../GaleriaVino/wpp.jpg" alt="logo de whatsapp">
 
     </main>
     <footer>
