--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -282,7 +282,7 @@
 </div>
 </section>
 
-<img class="wpp" src="../GaleriaVino/wpp.jpg" alt="logo de whatsapp">
+<img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
 
     </main>
 
