--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -89,12 +89,12 @@
           <div class="col titulo3">
             <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_rutini.webp"
+                src="./GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg"
                 class="card-img-top rounded float-start"
-                alt="imagen de vino rutini"
+                alt="imagen de vino CATENA"
               />
               <div class="card-body">
-                <h5 class="card-title">Vino Rutini</h5>
+                <h5 class="card-title">Vino Catena</h5>
               </div>
             </div>
           </div>
@@ -102,12 +102,12 @@
           <div class="col titulo3">
             <div class="card h-10">
               <img
-                src="./GaleriaVino/vino_trumpeter.webp"
+                src="./GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg"
                 class="card-img-top rounded mx-auto d-block"
-                alt="imagen de vino Trumpeter"
+                alt="imagen de vino Durigutti"
               />
               <div class="card-body">
-                <h5 class="card-title">Vino Trumpeter</h5>
+                <h5 class="card-title">Vino Durigutti</h5>
               </div>
             </div>
           </div>
@@ -126,9 +126,7 @@
         </div>
         <img
           class="wpp"
-          src="./GaleriaVino/wpp.jpg "
-          
-        />
+          src="./GaleriaVino/wpp.jpg " alt="logo de whatsapp">
       </section>
     </main>
     <!-- Pie -->
