--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -87,7 +87,7 @@
           <div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_linda 1.webp" class="card-img-top rounded float-start img_tamano " alt="imagen de vino linda">
             <div class="card-body align-items-center ">
-              <h5 class="card-title">Vino Rutini</h5>
+              <h5 class="card-title">Vino Linda</h5>
               <p>Precio: $1.299 $</p>
               <a href="#" class="btn btn-dark">Comprar</a>
             </div>
@@ -105,7 +105,7 @@
           <div class="col"><div class="card h-10 titulo3">
             <img src="../GaleriaVino/vino_trumpeter.webp" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trumpeter">
             <div class="card-body">
-              <h5 class="card-title">Vino Linda</h5>
+              <h5 class="card-title">Vino Trumpeter</h5>
               <p>Precio: $1.100</p>
               <a href=".#" class="btn btn-dark">Comprar</a>
             </div>
@@ -118,26 +118,26 @@
       <div class="row mt-5 ">
         <div class="col">
           <div class="card h-10 titulo3">
-          <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start img_tamano" alt="imagen de vino linda">
+          <img src="../GaleriaVino/vino_ CATENA ZAPATA MALBEC ARGENTINO 2018 6.jpg" class="card-img-top rounded float-start img_tamano" alt="imagen de vino Catena">
           <div class="card-body align-items-center">
-            <h5 class="card-title">Vino Rutini</h5>
+            <h5 class="card-title">Vino Catena</h5>
             <p>Precio: $1.299 $</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
         </div>
       </div>
         <div class="col"><div class="card h-10 titulo3">
-          <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Rutini">
+          <img src="../GaleriaVino/vino_ Durigutti-Malbec-300x300  7.jpg" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Durigutti">
           <div class="card-body">
-            <h5 class="card-title">Vino Rutini</h5>
+            <h5 class="card-title">Vino Durigutti</h5>
             <p>Precio: $1.500</p>
             <a href="#" class="btn btn-dark">Comprar</a>
           </div>
         </div></div>
         <div class="col"><div class="card h-10 titulo3">
-          <img src="../GaleriaVino/vino_ Luigi-Bosca-Malbec-20131-v2-300x300.jpg" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trumpeter">
+          <img src="../GaleriaVino/vino_ Luigi-Bosca-Malbec-20131-v2-300x300.jpg" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Luigi-Bosca">
           <div class="card-body">
-            <h5 class="card-title">Vino Linda</h5>
+            <h5 class="card-title">Vino Luigi-Bosca</h5>
             <p>Precio: $1.100</p>
             <a href=".#" class="btn btn-dark">Comprar</a>
           </div>
@@ -282,7 +282,7 @@
 </div>
 </section>
 
-<img class="wpp" src="../GaleriaVino/wpp.jpg" alt="WPP">
+<img class="wpp" src="../GaleriaVino/wpp.jpg" alt="logo de whatsapp">
 
     </main>
 
