--- a/Proyecto_Final_Coder/index.html
+++ b/Proyecto_Final_Coder/index.html
@@ -29,7 +29,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img_logo"
-              src="./GaleriaVino/logo_vino2.jpg"
+              src="./GaleriaVino/logo_vino.jpg"
               alt="Logo"
           /></a>
           <button
