--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#inicio"
-            ><img class="img_logo" src="../GaleriaVino/logo_vino2.jpg" alt="Logo"
+            ><img class="img_logo" src="../GaleriaVino/logo_vino.jpg" alt="Logo"
           /></a>
           <button
             class="navbar-toggler bg-white"
